--- a/VietNamToGo/CustomView/Cells/ZCCCityTableViewCell.xib
+++ b/VietNamToGo/CustomView/Cells/ZCCCityTableViewCell.xib
@@ -14,7 +14,7 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" restorationIdentifier="ZCCCityTableViewCell" selectionStyle="default" indentationWidth="10" rowHeight="393" id="KGk-i7-Jjw" customClass="ZCCCityTableViewCell" customModule="FUOT" customModuleProvider="target">
+        <tableViewCell contentMode="scaleToFill" restorationIdentifier="ZCCCityTableViewCell" selectionStyle="default" indentationWidth="10" rowHeight="393" id="KGk-i7-Jjw" customClass="ZCCCityTableViewCell" customModule="FUOTTests" customModuleProvider="target">
             <rect key="frame" x="0.0" y="0.0" width="360" height="393"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
@@ -29,26 +29,29 @@
                                 <color key="backgroundColor" red="0.17254901959999999" green="0.24313725489999999" blue="0.31372549020000001" alpha="1" colorSpace="calibratedRGB"/>
                             </imageView>
                             <visualEffectView opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="0VD-Xi-s1x">
-                                <rect key="frame" x="0.0" y="274" width="340" height="108.5"/>
+                                <rect key="frame" x="0.0" y="278" width="340" height="104.5"/>
                                 <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" id="YvS-8G-bO2">
-                                    <rect key="frame" x="0.0" y="0.0" width="340" height="108.5"/>
+                                    <rect key="frame" x="0.0" y="0.0" width="340" height="104.5"/>
                                     <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                                     <subviews>
                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Nha Trang" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="0PQ-zV-7LR">
-                                            <rect key="frame" x="10" y="10" width="320" height="29.5"/>
+                                            <rect key="frame" x="10" y="10" width="320" height="35"/>
+                                            <constraints>
+                                                <constraint firstAttribute="height" constant="35" id="hH9-LT-o5d"/>
+                                            </constraints>
                                             <fontDescription key="fontDescription" name="Roboto-Medium" family="Roboto" pointSize="25"/>
                                             <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                             <nil key="highlightedColor"/>
                                         </label>
                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Rebecca Isaak attended the same study-abroad program as her mother – but her experiences were uniquely her own." lineBreakMode="tailTruncation" numberOfLines="3" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="4df-UI-Ez3">
-                                            <rect key="frame" x="10" y="49" width="320" height="49.5"/>
+                                            <rect key="frame" x="10" y="45" width="320" height="49.5"/>
                                             <fontDescription key="fontDescription" name="Roboto-Regular" family="Roboto" pointSize="14"/>
                                             <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                             <nil key="highlightedColor"/>
                                         </label>
                                     </subviews>
                                     <constraints>
-                                        <constraint firstItem="4df-UI-Ez3" firstAttribute="top" secondItem="0PQ-zV-7LR" secondAttribute="bottom" constant="10" id="0Lf-yf-3Wo"/>
+                                        <constraint firstItem="4df-UI-Ez3" firstAttribute="top" secondItem="0PQ-zV-7LR" secondAttribute="bottom" id="0Lf-yf-3Wo"/>
                                         <constraint firstAttribute="trailing" secondItem="4df-UI-Ez3" secondAttribute="trailing" constant="10" id="11q-Vx-5rs"/>
                                         <constraint firstItem="4df-UI-Ez3" firstAttribute="leading" secondItem="YvS-8G-bO2" secondAttribute="leading" constant="10" id="9fa-tJ-lbw"/>
                                         <constraint firstAttribute="bottom" secondItem="4df-UI-Ez3" secondAttribute="bottom" constant="10" id="Msb-dH-5gX"/>
