Make trip : finish step 1

--- a/VietNamToGo/Base.lproj/Home.storyboard
+++ b/VietNamToGo/Base.lproj/Home.storyboard
@@ -5,9 +5,6 @@
         <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
     </dependencies>
     <customFonts key="customFonts">
-        <mutableArray key="Roboto-Medium.ttf">
-            <string>Roboto-Medium</string>
-        </mutableArray>
         <mutableArray key="Roboto-Regular.ttf">
             <string>Roboto-Regular</string>
         </mutableArray>
@@ -80,16 +77,15 @@
                                     <outlet property="delegate" destination="d8F-tA-VKa" id="ERa-vZ-9i6"/>
                                 </connections>
                             </tableView>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="poC-xu-MP1" customClass="ZCCButton" customModule="Fuot">
-                                <rect key="frame" x="127" y="424" width="120" height="40"/>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="poC-xu-MP1" customClass="ZCCButton" customModule="Fuot">
+                                <rect key="frame" x="147" y="424" width="80" height="80"/>
                                 <color key="backgroundColor" red="0.17254901959999999" green="0.24313725489999999" blue="0.31372549020000001" alpha="1" colorSpace="calibratedRGB"/>
                                 <constraints>
-                                    <constraint firstAttribute="width" constant="120" id="9rx-Se-iOt"/>
-                                    <constraint firstAttribute="height" constant="40" id="KIt-0t-sZm"/>
+                                    <constraint firstAttribute="width" constant="80" id="9rx-Se-iOt"/>
+                                    <constraint firstAttribute="height" constant="80" id="KIt-0t-sZm"/>
                                 </constraints>
-                                <fontDescription key="fontDescription" name="Roboto-Medium" family="Roboto" pointSize="12"/>
-                                <state key="normal" title="Tiếp">
-                                    <color key="titleColor" red="0.95294117649999999" green="0.61176470589999998" blue="0.070588235289999995" alpha="1" colorSpace="calibratedRGB"/>
+                                <state key="normal" image="fuot.png">
+                                    <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 </state>
                                 <connections>
                                     <action selector="btnContinueTapped:" destination="d8F-tA-VKa" eventType="touchUpInside" id="VpL-Ep-WkM"/>
@@ -275,6 +271,7 @@
     </scenes>
     <resources>
         <image name="down_arrow.png" width="12" height="17"/>
+        <image name="fuot.png" width="1325" height="1325"/>
         <image name="vietnam1.png" width="574" height="1020"/>
     </resources>
 </document>
